--- a/Front-end-template/app/build.gradle
+++ b/Front-end-template/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    useLibrary 'org.apache.http.legacy' // You should add this
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.crystalyip.csc301"
