--- a/Front-end-template/app/build.gradle
+++ b/Front-end-template/app/build.gradle
@@ -16,6 +16,11 @@ android {
                 onesignal_google_project_number: 'REMOTE'
         ]
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -55,7 +60,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
 
-    implementation "org.apache.httpcomponents:httpcore:4.4.5"
-    implementation "org.apache.httpcomponents:httpmime:4.5.2"
+    implementation('org.apache.httpcomponents:httpmime:4.3.6') {
+        exclude module: 'httpclient'
+    }
+    implementation 'org.apache.httpcomponents:httpclient-android:4.3.5'
 }
 apply plugin: 'com.google.gms.google-services'
